--- a/CDwebV1/stl.css
+++ b/CDwebV1/stl.css
@@ -104,7 +104,7 @@ header {
   font-family: 'Open Sans', sans-serif;
   font-size: 28px;
   font-weight: 600;
-  color: #111;
+  color: #111111;
   display: block;
   margin: 31px 0;
   text-align: left;
@@ -162,7 +162,7 @@ header nav ul li a {
   text-shadow: 2px 2px 10px black;
   color: #fff;
   text-align: center;
-  font-weight: 200;
+  font-weight: 300;
   line-height: 80px;
 }
 
@@ -217,7 +217,7 @@ button {
     font-weight: bold;
 }
 
-.text-logo {
+#text-logo {
   width: 100%;
   height: 140px;
   font-family: 'Open Sans', sans-serif;
@@ -232,7 +232,7 @@ button {
   display: inline-block;
 }
 
-.logo-border {
+#logo-border {
   width: fit-content;
   border: 4px solid #111;
   float: center;
@@ -250,7 +250,7 @@ button {
   font-size: 20px;
   font-style: italic;
   text-align: center;
-  font-weight: 200;
+  font-weight: 300;
 }
 
 
@@ -290,30 +290,41 @@ footer ul li a {
 /* ------------------------------------------------
 Display Page
 --------------------------------------------------*/
-.Chart-titles {
-    width: 100%;
-    height: 200px;
+#disp-result {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  margin-top: 10px;
+  line-height: 50px;
+  font-size: 36px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
 }
 
-#cur-chart-title {
+.chartTitles {
+    width: 100%;
+    height: 100px;
+}
+
+#curChartTitle {
   height: 100px;
   width: 500px;
   margin: 0 0 0 100px;
   float: left;
   text-align: center;
-  line-height: 300px;
+  line-height: 100px;
 }
 
-#his-chart-title {
+#hisChartTitle {
   height: 100px;
   width: 500px;
   margin: 0 100px 0 100px;
   float: right;
   text-align: center;
-  line-height: 300px;
+  line-height: 100px;
 }
 
-.Chart-titles p {
+.chartTitles p {
   font-family: 'Open Sans', sans-serif;
   font-size: 32px;
 }
@@ -329,17 +340,15 @@ Display Page
 
 .Current {
   height: 400px;
-  width: 500px;
-  background-color: #A43131;
-  margin: 0 0 0 100px;
+  width: 600px;
+  margin: 0 0 0 50px;
   float: left;
 }
 
 .Historic {
   height: 400px;
-  width: 500px;
-  background-color: #A43131;
-  margin: 0 100px 0 100px;
+  width: 600px;
+  margin-right: 50px;
   float: right;
 }
 
